@@ -5,6 +5,7 @@
              provider-name="divingmule">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
+    <import addon="script.module.feedparser" version="5.1.3"/>
     <import addon="script.module.beautifulsoup" version="3.2.1"/>
     <import addon="script.common.plugin.cache" version="2.5.6"/>
     <import addon="script.ircchat" version="1.0.1" optional="true"/>
